force-app/main/default/objects/OrderItemSummary/fields/avaoms__LandedCost__c.field-meta.xml
<CustomField>
    <fullName>avaoms__LandedCost__c</fullName>
    <inlineHelpText>Total import duty calculated for the line item.</inlineHelpText>
    <label>Custom/Importy Duty</label>
    <length>18</length>
    <type>Text</type>
</CustomField>