force-app/main/default/objects/OrderItemSummary/fields/avaoms__Sales_Tax_Amount_Line__c.field-meta.xml
<CustomField>
    <fullName>avaoms__Sales_Tax_Amount_Line__c</fullName>
    <label>Tax Amount Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>