force-app/main/default/objects/OrderItemSummary/fields/avaoms__Sales_Tax_Details__c.field-meta.xml
<CustomField>
    <fullName>avaoms__Sales_Tax_Details__c</fullName>
    <label>Tax Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>