force-app/main/default/objects/OrderItemSummary/fields/avaoms__Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>avaoms__Sales_Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>