force-app/main/default/objects/OrderItemSummary/fields/BusinessName__c.field-meta.xml
<CustomField>
    <fullName>BusinessName__c</fullName>
    <label>BusinessName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>