force-app/main/default/objects/OrderItemSummary/fields/FO_Segment__c.field-meta.xml
<CustomField>
    <fullName>FO_Segment__c</fullName>
    <description>TestType__c + &apos;-&apos; + IF(pwnEligible__c, &apos;True&apos;, &apos;False&apos;) + &apos;-&apos; + fulfillmentPartner__c +&apos;-&apos;+ customerID__c +&apos;-&apos;+ IF(OTCCleared__c, &apos;True&apos;, &apos;False&apos;)</description>
    <formula>TestType__c + &apos;-&apos; + IF(pwnEligible__c, &apos;True&apos;, &apos;False&apos;) + &apos;-&apos; + fulfillmentPartner__c +&apos;-&apos;+ customerID__c +&apos;-&apos;+ IF(OTCCleared__c, &apos;True&apos;, &apos;False&apos;)+ &apos;-&apos; + IF(resultingRequired__c, &apos;True&apos;, &apos;False&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FO Segment</label>
    <type>Text</type>
</CustomField>