force-app/main/default/objects/OrderItemSummary/fields/Is_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Service</label>
    <type>Checkbox</type>
</CustomField>