force-app/main/default/objects/OrderItemSummary/fields/isAppeasable__c.field-meta.xml
<CustomField>
    <fullName>isAppeasable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAppeasable</label>
    <type>Checkbox</type>
</CustomField>