force-app/main/default/objects/OrderItemSummary/fields/OTCCleared__c.field-meta.xml
<CustomField>
    <fullName>OTCCleared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true(can be gifted)/false(not giftable)</description>
    <label>OTC Cleared</label>
    <type>Checkbox</type>
</CustomField>