force-app/main/default/objects/OrderItemSummary/fields/PrescriptiveAuthority__c.field-meta.xml
<CustomField>
    <fullName>PrescriptiveAuthority__c</fullName>
    <label>Prescriptive Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>