force-app/main/default/objects/OrderItemSummary/fields/PrimaryCategory__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCategory__c</fullName>
    <label>PrimaryCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>