force-app/main/default/objects/OrderItemSummary/fields/Product_cancel_fee__c.field-meta.xml
<CustomField>
    <fullName>Product_cancel_fee__c</fullName>
    <label>Cancellation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>