force-app/main/default/objects/OrderItemSummary/fields/promoAttributes_json__c.field-meta.xml
<CustomField>
    <fullName>promoAttributes_json__c</fullName>
    <label>promoAttributes_json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>