force-app/main/default/objects/OrderItemSummary/fields/pwnEligible__c.field-meta.xml
<CustomField>
    <fullName>pwnEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PWN Eligible</label>
    <type>Checkbox</type>
</CustomField>