force-app/main/default/objects/OrderItemSummary/fields/resultRequired__c.field-meta.xml
<CustomField>
    <fullName>resultRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Result Required</label>
    <type>Checkbox</type>
</CustomField>